2011-08-22  Tomas Palacios  <tomas.palacios@artica.es>

	* pandora_console/pandoradb_data.sql
	pandora_console/pandoradb.data.oracle.sql
	pandora_console/pandoradb.postgreSQL.sql:updated the
	default site news.

	Fixes: Bug ID 3396846

2011-08-23  Sergio Martin <sergio.martin@artica.es>

	* operation/reporting/reporting_viewer.php: Fixed require embed 
	require_once problem in the reports view

2011-08-23 Javier Lanz <javier.lanz@artica.es>

	* include/functions_filemanager.php: Fixed an style bug in collections
	table

2011-08-23  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/agent_manager.php: fixed typo mistake.

2011-08-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_networkmap.php: Fixed a unecessary toLower
	call function

2011-08-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* images/skin/skin_default/images/plotchart.png: Added network console
	icon in default skin.

2011-08-23  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_networkmap.php: added parameter to cut the names
	by default is true.

2011-08-23  KIKUCHI Koichiro  <koichiro@rworks.jp>

	* operation/agentes/exportdata.php: Fixed format character for default
	  start_time and end_time.

2011-08-23  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_modules.php: Added comment for the 5th argument
	of modules_get_agents_with_module_name().

2011-08-22  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_networkmap.php: fixed the create relative image for
	other installations such as in other paths into www directory.

2011-08-22  Junichi Satoh  <junichi@rworks.jp>

	* include/javascript/jquery.pandora.controls.js,
	godmode/groups/group_list.php,
	godmode/massive/massive_delete_agents.php,
	godmode/massive/massive_edit_agents.php,
	godmode/massive/massive_delete_modules.php,
	include/functions_modules.php: Added group recursion feature,
	it allows to search agents in child groups.
	
2011-08-22  SAncho Lerena <slerena@ærtica.es>
