@@ -201,6 +201,12 @@ ALTER TABLE `tnetwork_map` ADD COLUMN `show_snmp_modules` TINYINT(1) UNSIGNED  N
 
 ALTER TABLE `trecon_task` ADD COLUMN `disabled` tinyint(1) UNSIGNED NOT NULL DEFAULT 0;
 
+ALTER TABLE `trecon_task` ADD COLUMN `disabled` tinyint(1) UNSIGNED NOT NULL DEFAULT 0;
+ALTER TABLE `trecon_task` ADD COLUMN `os_detect` tinyint(1) unsigned default '0';
+ALTER TABLE `trecon_task` ADD COLUMN `resolve_names` tinyint(1) unsigned default '0';
+ALTER TABLE `trecon_task` ADD COLUMN `parent_detection` tinyint(1) unsigned default '0';
+ALTER TABLE `trecon_task` ADD COLUMN `parent_recursion` tinyint(1) unsigned default '0';
+
 -- -----------------------------------------------------
 -- Table `tplanned_downtime`
 -- -----------------------------------------------------
