@@ -1,3 +1,8 @@
+2011-08-23  Sancho Lerena <slerena@artica.es>
+
+	* pandora_migrate_v3.2_to_v4.0.sql: Missing some alter sentences
+	for trecon_task table. Added.
+
 2011-08-22  Tomas Palacios  <tomas.palacios@artica.es>
 
 	* pandora_console/pandoradb_data.sql
